// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic Meldekort test 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        <span>
          Du har 2 meldekort klare for innsending
        </span>
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Oversikt over meldekort
      </span>
    </p>
    <p>
      <span>
        <span>
          Du har gjenstående 12 feriedager ved dagpenger.
        </span>
      </span>
    </p>
  </span>
</a>
`;

exports[`basic Meldekort test with no meldekort 1`] = `null`;

exports[`basic one Meldekort test 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        <span>
          Du har ett meldekort for uke week 42 (2018-7-17 - 2018-7-17) klart for innsending
        </span>
      </span>
       
    </span>
    <span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p>
      <span>
        <span>
          Du har gjenstående 12 feriedager ved dagpenger.
        </span>
      </span>
    </p>
  </span>
</a>
`;

exports[`basic one Meldekort test no risk 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        <span>
          Du har ett meldekort for uke week 42 (2018-7-17 - 2018-7-17) klart for innsending
        </span>
      </span>
       
    </span>
    <span>
      <span>
        <span>
          (Siste innsendingsfrist før trekk: 2018-8-9)
        </span>
      </span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p>
      <span>
        <span>
          Du har gjenstående 12 feriedager ved dagpenger.
        </span>
      </span>
    </p>
  </span>
</a>
`;

exports[`basic one Meldekort test no risk no remaining holidays 1`] = `
<a
  className="message clickable meldekort"
  data-ga="Dittnav/Varsel"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/meldekort/"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        <span>
          Du har ett meldekort for uke week 42 (2018-7-17 - 2018-7-17) klart for innsending
        </span>
      </span>
       
    </span>
    <span>
      <span>
        <span>
          (Siste innsendingsfrist før trekk: 2018-8-9)
        </span>
      </span>
       
    </span>
    <span>
       
    </span>
    <p
      id="meldekort.lenkeTekst"
    >
      <span>
        Send meldekort
      </span>
    </p>
    <p />
  </span>
</a>
`;

exports[`basic zero Meldekort test 1`] = `
<div
  className="message meldekort"
  data-ga="Dittnav/Varsel"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
      <span>
        <span>
          (Send inn nå, du risikerer trekk!)
        </span>
      </span>
       
    </span>
    <p>
      <span>
        <span>
          Du har gjenstående 12 feriedager ved dagpenger.
        </span>
      </span>
    </p>
  </span>
</div>
`;

exports[`no cards no risk 1`] = `
<div
  className="message meldekort"
  data-ga="Dittnav/Varsel"
>
  <span
    aria-label="alarm-ikon"
    className="icon meldekort-icon"
  />
  <span
    className="texts"
  >
    <span>
       
    </span>
    <span>
       
    </span>
    <p>
      <span>
        <span>
          Du har gjenstående 12 feriedager ved dagpenger.
        </span>
      </span>
    </p>
  </span>
</div>
`;
